# Compiler

./: .gitignore  CMakeLists.txt  DFAMinimization.cpp  DFAMinimization.h  Input.cpp  Input.h  LexicalRules.cpp  LexicalRules.h  Matcher.cpp  Matcher.h  NFA.cpp  NFA.h  NFATODFA.cpp  NFATODFA.h  Node.cpp  Node.h  State.cpp  State.h  example.c  finalMinimizedTable.txt  lexical.l  main.cpp  output.txt  test.txt  utilities.cpp  utilities.h
ParserGenerator/: CFG.cpp  CFG.h  CFGBuilding.cpp  CFGBuilding.h  FirstAndFollow.cpp  FirstAndFollow.h  FirstAndFollowMain.cpp  FirstAndFollowMain.h  NonTerminal.cpp  NonTerminal.h  Parser.cpp  Parser.h  Production.cpp  Production.h  Terminal.cpp  Terminal.h  main.cpp  main.h  rules.txt
phase1/: DFAMinimization.cpp  DFAMinimization.h  Input.cpp  LexicalRules.cpp  LexicalRules.h  Matcher.cpp  NFA.cpp  NFATODFA.cpp  NFATODFA.h
